--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
   },
   "dependencies": {
     "@fontsource/inter": "^4.5.14",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-query": "^4.16.1",
     "@tanstack/react-query-devtools": "^4.16.1",
     "axios": "^1.1.3",
